--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ div.beloved:after {
   display: flex;
   position: absolute;
   white-space: pre;
-  content: "Thank you \a Aya";
+  content: "Thank you \a Zhanna";
 
   text-align: center;
   line-height: 1.1;
